--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
       <p>Dear awesome colleagues, <br>This calculator is currently in beta testing. Some features might not work, or some information might be missing or incorrect. For feedback, please email <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a>.</p><br>
       <p>What to look out for when going through the page:  
         <ul>
-          <li>Any typos in the content; any spaces should be added for readability.</li>
-          <li>Missing "Units" or explanations in any part of the form or output tables.</li>
+          <li>compare the calculations with the original sequencing calculator</li>
+          <li>Missing "Units", typos, misleading information or explanations in any part of the form or output tables.</li>
           <li>For PhiX: please let me know if any assay combinations is incorrect.</li>
           <li>The "Indexed Library Volume" is retrospectively calculated from total pooling and pooling ratio. Please check if the value is reflected correctly.</li>
           <li>Any additional information or sections, such as Q&A, can be added. Please let me know.</li>
