--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
           <li>Missing "Units", typos, misleading information or explanations in any part of the form or output tables.</li>
           <li>For PhiX: please let me know if any assay combinations is incorrect.</li>
           <li>The "Indexed Library Volume" is retrospectively calculated from total pooling and pooling ratio. Please check if the value is reflected correctly.</li>
+          <li>The output PDF file contain all information and the table is properly captured within the margin.</li>
           <li>Any additional information or sections, such as Q&A, can be added. Please let me know.</li>
           <li>Would it be worth adding a "Contact list" section for all FASs and sequencing facilities for customers' reference?</li>
           <li>Would it be useful to add: <ol><li>Calculation steps used to calculate  each parameter.</li><li>Table of PhiX recommendations based on assay combinations.</li></ol></li>
