--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
   </head>
   <body>
     <div class="beta-banner" id="betaBanner">
-      <p>Dear awesome colleagues, <br>This calculator is currently in beta testing. Some features might not work, or some information might be missing or incorrect. For feedback, please email <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a>.</p><br>
+      <p>Dear awesome colleagues, <br>Please take 30 seconds to read this note. <br> This calculator is currently in beta testing. Some features might not work, or some information might be missing or incorrect. For feedback, please email <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a>.</p><br>
       <p>What to look out for when going through the page:  
         <ul>
           <li>compare the calculations with the original sequencing calculator</li>
-          <li>Missing "Units", typos, misleading information or explanations in any part of the form or output tables.</li>
+          <li></li>
+          <li>Check for typos, misleadding information, or any other information to be added.</li>
           <li>For PhiX: please let me know if any assay combinations is incorrect.</li>
-          <li>The "Indexed Library Volume" is retrospectively calculated from total pooling and pooling ratio. Please check if the value is reflected correctly.</li>
-          <li>The output PDF file contain all information and the table is properly captured within the margin.</li>
-          <li>Any additional information or sections, such as Q&A, can be added. Please let me know.</li>
+          <li>The "Indexed Library Volume" is retrospectively calculated from total pooling and pooling ratio. Please check if the value is reflected correctly from the original sequencing calculator.</li>
+          <li>PDF output: The table should be contained within the page margin. if not, please send me the pdf output file for further toubleshooting.</li>
+          <li>Any other additional features, information or sections, such as Q&A, can be added. Please let me know and we can discuss.</li>
           <li>Would it be worth adding a "Contact list" section for all FASs and sequencing facilities for customers' reference?</li>
           <li>Would it be useful to add: <ol><li>Calculation steps used to calculate  each parameter.</li><li>Table of PhiX recommendations based on assay combinations.</li></ol></li>
         </ul>
