--- a/index.html
+++ b/index.html
@@ -12,8 +12,7 @@
       <p>Dear awesome colleagues, <br>Please take 30 seconds to read this note. <br> This calculator is currently in beta testing. Some features might not work, or some information might be missing or incorrect. For feedback, please email <a href="mailto:syabira.yusoff@bd.com">syabira.yusoff@bd.com</a>.</p><br>
       <p>What to look out for when going through the page:  
         <ul>
-          <li>compare the calculations with the original sequencing calculator</li>
-          <li></li>
+          <li>Compare the calculations with the original sequencing calculator</li>
           <li>Check for typos, misleadding information, or any other information to be added.</li>
           <li>For PhiX: please let me know if any assay combinations is incorrect.</li>
           <li>The "Indexed Library Volume" is retrospectively calculated from total pooling and pooling ratio. Please check if the value is reflected correctly from the original sequencing calculator.</li>
