--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>BDSeqCalcV2.1</title>
+    <title>BDSeqCalc</title>
     <link rel="icon" type="x-icon" href="htExpress_cartoon.ico">
     <link rel="stylesheet" href="style.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
