Elution Buffer Warning Changed
Elution buffer warning condition changes

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
               <th class="tooltip" style="width:20%">Reads per cell<span class="tooltiptext">See info for recommendation</span></th>
               </tr>
               </thead >
-              <tbody id="inputRows" />
+              <tbody id="inputRows"></tbody>
               </table>
               <br>
 
