--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -51,12 +51,52 @@
                 color: orangered;
                 font-weight: bold;
             }
+
+            /* Styles for screens below than 769px */
+
+            @media (max-width: 768px) {
+                .mainContent {
+                    margin: 10px 20px;
+                    padding: 20px;
+                }
+                .mainPageButton {
+                    padding: 10px 20px;
+                    font-size: 16px;
+                    width: 80%;
+                }
+            }
+
+            /* Styles for screens between 769px and 1024px */
+@media (min-width: 769px) and (max-width: 1024px) {
+    .mainContent {
+        margin: 15px 30px;
+        padding: 25px;
+    }
+    .mainPageButton {
+        padding: 12px 24px;
+        font-size: 18px;
+        width: 70%;
+    }
+}
+
+/* Styles for screens 1025px and above */
+@media (min-width: 1025px) {
+    .mainContent {
+        margin: 20px 40px;
+        padding: 30px;
+    }
+    .mainPageButton {
+        padding: 15px 30px;
+        font-size: 20px;
+        width: 60%;
+    }
+}
         </style>
 
     </head>
     <header>
         <div>
-            <h1>BD Rhapsody Pipeline</h1>
+            <h1>BD Rhapsody&trade; Pipeline</h1>
             <h2>Quick Start Guide</h2>
         </div>
     </header>
@@ -65,9 +105,11 @@
         <div class="mainContent">
         <h1>Welcome to BD Rhapsody&trade; Pipeline Analysis Setup</h1>
 
-        <a href="01-PipelineSetup.html" class="mainPageButton" target="_blank">Pipeline Setup</a>
-        <a href="02-fastqUpload.html" class="mainPageButton" target="_blank">File upload to Cloud Platform</a>
+        <a href="01-PipelineSetup.html" class="mainPageButton" >Pipeline Setup</a>
+        <a href="02-fastqUpload.html" class="mainPageButton" >File upload to Cloud Platform</a>
         <p style="font-size: 16px; text-align: center;font-weight: bold;color:#004593">Customers who are working on Local Installation, you may skip the "File upload to Cloud Platform" step.<br></p>
+        <a href="./03-Reference_Files.html" class="mainPageButton" >Reference Files Based on Your Assays</a>
+        <a href="./04-runThePipeline.html" class="mainPageButton" >Pipeline Run and Output Files</a>
         </div>
     </body>
 </html>
