--- a/simplifiedSequencingCalculator/index.html
+++ b/simplifiedSequencingCalculator/index.html
@@ -65,7 +65,7 @@
 
         .form-group{
             display: grid;
-            grid-template-columns: 180px 180px;
+            grid-template-columns: 180px 250px;
             align-items: left;
         }
         
@@ -200,10 +200,10 @@
             <input type="number" id="cellNumber" name="cellNumber" placeholder="Total cell number">
 
             <label for = "TCRcellNumber">TCR cell number</label>
-            <input type="number" id="TCRcellNumber" name="TCRcellNumber" placeholder="TCR cell number">
+            <input type="number" id="TCRcellNumber" name="TCRcellNumber" placeholder="Required: TCR cell number">
 
             <label for = "BCRcellNumber">BCR cell number</label>
-            <input type="number" id="BCRcellNumber" name="BCRcellNumber" placeholder="BCR cell number"><br>
+            <input type="number" id="BCRcellNumber" name="BCRcellNumber" placeholder="Required: BCR cell number"><br>
         </div>
         <button onclick="calculate()" style="float: right;">Calculate</button><br><br>
         </div>
