update color matching cornerstone

--- a/PrimaryPipelineSetup/01-PipelineSetup.html
+++ b/PrimaryPipelineSetup/01-PipelineSetup.html
@@ -159,14 +159,14 @@ to register your account.</li>
                             <div class="card" style="background-color: #f1f1f1;">
                             <h2>CWL-runner installation</h2>
                             <ol>
-                            <li>Update pip before installing cwlref-runner by using the command:</li>
+                            <li>Update pip before installing cwl-runner by using the command:</li>
                             <p class="code">pip install -U pip</p>
                             <li>Install the package from PyPi. Enter:</li>
-                            <p class="code">pip install cwlref-runner</p>
+                            <p class="code">pip install cwl-runner</p>
                             <li>Ensure that cwl-runner is in your path. Type:</li>
                             <p class="code">cwl-runner</p>
                             <li>If the command is not found, add the install location of the pip packages to $PATH. Find where cwl-runner is installed by entering:</li>
-                            <p class="code">pip show cwlref-runner</p>
+                            <p class="code">pip show cwl-runner</p>
                             <li>Add the above location to $PATH. For example:</li>
                             <p class="code">export</p>
                             <p>PATH=$PATH:<mark>`/Library/Frameworks/Python.framework/Versions/3.6/lib/python3`</mark></p>
@@ -234,18 +234,18 @@ Please continue to CWL runner installation for MasOS and LINUX systems.</p>
 <h2>CWL-runner installation</h2>
 <br>
 <ol>
-<li>Update pip before installing cwlref-runner by using the command:</li>
+<li>Update pip before installing cwl-runner by using the command:</li>
 <p class="code">pip install -U pip</p>
 <li>Install the package from PyPi. Enter:</li>
-<p class="code">pip install cwlref-runner</p>
+<p class="code">pip install cwl-runner</p>
 <li>Ensure that cwl-runner is in your path. Type:</li>
 <p class="code">cwl-runner</p>
 <li>If the command is not found, add the install location of the pip packages to $PATH. Find where cwl-runner is installed by entering:</li>
-<p class="code">pip show cwlref-runner</p>
+<p class="code">pip show cwl-runner</p>
 <li>Add the above location to $PATH. For example:</li>
 <p class="code">export</p>
 <p>PATH=$PATH:<mark>`/Library/Frameworks/Python.framework/Versions/3.6/lib/python3`</mark></p>
-<p>You should substitute the <mark>`highlighhted`</mark> part after : with your <mark>`Location`</mark></p>
+<p>You should substitute the <mark>`highlighted`</mark> part after : with your <mark>`Location`</mark></p>
 <li>Restart the command line utility.</li></ol></div>
 
 <div class="card">
