--- a/PrimaryPipelineSetup/02-filesUpload.html
+++ b/PrimaryPipelineSetup/02-filesUpload.html
@@ -3,7 +3,7 @@
 <link rel="stylesheet" href="style.css">
 <head>
 
-<title>FASTQ Upload</title>
+<title>Files Upload</title>
     <link rel="apple-touch-icon" sizes="57x57" href="./pictures/favicon_rhapsody.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./pictures/favicon_rhapsody.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./pictures/favicon_rhapsody.ico/apple-icon-72x72.png">
