--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -106,7 +106,7 @@
         <h1>Welcome to BD Rhapsody&trade; Pipeline Analysis Setup</h1>
 
         <a href="01-PipelineSetup.html" class="mainPageButton" >Pipeline Setup</a>
-        <a href="02-fastqUpload.html" class="mainPageButton" >File upload to Cloud Platform</a>
+        <a href="02-filesUpload.html" class="mainPageButton" >File upload to Cloud Platform</a>
         <p style="font-size: 16px; text-align: center;font-weight: bold;color:#004593">Customers who are working on Local Installation, you may skip the "File upload to Cloud Platform" step.<br></p>
         <a href="./03-Reference_Files.html" class="mainPageButton" >Reference Files Based on Your Assays</a>
         <a href="./04-runThePipeline.html" class="mainPageButton" >Pipeline Run and Output Files</a>
