--- a/PrimaryPipelineSetup/07-troubleshooting.html
+++ b/PrimaryPipelineSetup/07-troubleshooting.html
@@ -2,12 +2,12 @@
 <html lang="en">
     <head>
         <link rel="apple-touch-icon" sizes="57x57" href="./pictures/favicon_rhapsody.ico/apple-icon-57x57.png">
-<link rel="apple-touch-icon" sizes="60x60" href="./pictures/favicon_rhapsody.ico/apple-icon-60x60.png">
-<link rel="apple-touch-icon" sizes="72x72" href="./pictures/favicon_rhapsody.ico/apple-icon-72x72.png">
-<link rel="apple-touch-icon" sizes="76x76" href="./pictures/favicon_rhapsody.ico/apple-icon-76x76.png">
-<link rel="apple-touch-icon" sizes="114x114" href="./pictures/favicon_rhapsody.ico/apple-icon-114x114.png">
-<link rel="apple-touch-icon" sizes="120x120" href="./pictures/favicon_rhapsody.ico/apple-icon-120x120.png">
-<link rel="apple-touch-icon" sizes="144x144" href="./pictures/favicon_rhapsody.ico/apple-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="./pictures/favicon_rhapsody.ico/apple-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="./pictures/favicon_rhapsody.ico/apple-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="./pictures/favicon_rhapsody.ico/apple-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="./pictures/favicon_rhapsody.ico/apple-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="./pictures/favicon_rhapsody.ico/apple-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="./pictures/favicon_rhapsody.ico/apple-icon-144x144.png">
 <link rel="apple-touch-icon" sizes="152x152" href="./pictures/favicon_rhapsody.ico/apple-icon-152x152.png">
 <link rel="apple-touch-icon" sizes="180x180" href="./pictures/favicon_rhapsody.ico/apple-icon-180x180.png">
 <link rel="icon" type="image/png" sizes="192x192"  href="./pictures/favicon_rhapsody.ico/android-icon-192x192.png">
@@ -18,8 +18,9 @@
 <meta name="msapplication-TileColor" content="#ffffff">
 <meta name="msapplication-TileImage" content="./pictures/favicon_rhapsody.ico/ms-icon-144x144.png">
 <meta name="theme-color" content="#ffffff">
-        <title>
 
+        <title>
+            
         </title>
         <style>
             .mainContent{
@@ -58,63 +59,21 @@
 
             @media (max-width: 768px) {
                 .mainContent {
-                    margin: 10px 20px;
-                    padding: 20px;
+                    margin: 10px 10px;
+                    padding: 10px;
                 }
                 .mainPageButton {
-                    padding: 10px 20px;
+                    width: 100%;
+                    padding: 10px;
                     font-size: 16px;
-                    width: 80%;
                 }
             }
-
-            /* Styles for screens between 769px and 1024px */
-@media (min-width: 769px) and (max-width: 1024px) {
-    .mainContent {
-        margin: 15px 30px;
-        padding: 25px;
-    }
-    .mainPageButton {
-        padding: 12px 24px;
-        font-size: 18px;
-        width: 70%;
-    }
-}
-
-/* Styles for screens 1025px and above */
-@media (min-width: 1025px) {
-    .mainContent {
-        margin: 20px 40px;
-        padding: 30px;
-    }
-    .mainPageButton {
-        padding: 15px 30px;
-        font-size: 20px;
-        width: 60%;
-    }
-}
         </style>
-
     </head>
-    <header>
-        <div>
-            <h1>BD Rhapsody&trade; Pipeline</h1>
-            <h2>Quick Start Guide</h2>
-        </div>
-    </header>
-
     <body>
         <div class="mainContent">
-        <h1>Welcome to BD Rhapsody&trade; Pipeline Analysis Setup</h1>
-
-        <a href="01-PipelineSetup.html" class="mainPageButton" >Pipeline access and Local Installation Setup</a>
-        <a href="02-filesUpload.html" class="mainPageButton">File upload to Cloud Platform <br><span style="font-size: 1em;color:#FF6E00;">For Local Installation, skip this step. </span></a><br>
-        
-        <a href="./03-Reference_Files.html" class="mainPageButton" >Reference Files Based on Your Assays</a>
-        <a href="./04-runThePipeline.html" class="mainPageButton" >Run the Pipeline</a>
-        <a href="" class="mainPageButton">Pipeline Output Files</a>
-        <a href="" class="mainPageButton">Review HTML File</a>
-        <a href="" class="mainPageButton" >Troubleshooting</a>
+            <h1>Troubleshooting Guide</h1>
+            <p>Click on the button below to go to the next page.</p>
+            <a href="./01-introduction.html" class="mainPageButton">Next Page</a>
         </div>
     </body>
-</html>
