step1-4 review release

--- a/PrimaryPipelineSetup/index.html
+++ b/PrimaryPipelineSetup/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>  
         <title>BDRhapsody&trade; Pipeline Quick Start Guide</title>
-        <link rel="stylesheet" href="assets/CSS/basicStyle.css">    
+        <link rel="stylesheet" href="assets/CSS/styles.css">    
         <link rel="apple-touch-icon" sizes="57x57" href="./assets/images/XpressFavicon.ico/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="./assets/images/XpressFavicon.ico/apple-icon-60x60.png">
         <link rel="apple-touch-icon" sizes="72x72" href="./assets/images/XpressFavicon.ico/apple-icon-72x72.png">
@@ -32,13 +32,13 @@
             <!-- Left sidebar: main Steps -->
              <nav class="sidebar-left"> 
                 <h4>Sections:</h4>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step1')">Pipeline Setup</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step2')">Files Upload</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step3')">Reference Files</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step4')">Run the Pipeline</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step5')">Pipeline Output Files</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step6')">HTML Review</a></button>
-                    <button class="mainPageButton"><a href="#" onclick="loadStep('step7')">Troubleshooting</a></button>
+                <a href="#" onclick="loadStep('step1')"><button class="mainPageButton">Pipeline Setup</button></a>
+                <a href="#" onclick="loadStep('step2')"><button class="mainPageButton">Files Upload</button></a>
+                <a href="#" onclick="loadStep('step3')"><button class="mainPageButton">Reference Files</button></a>
+                <a href="#" onclick="loadStep('step4')"><button class="mainPageButton">Run the Pipeline</button></a>
+                <a href="#" onclick="loadStep('step5')"><button class="mainPageButton">Pipeline Output Files</button></a>
+                <a href="#" onclick="loadStep('step6')"><button class="mainPageButton">HTML Review</button></a>
+                <a href="#" onclick="loadStep('step7')"><button class="mainPageButton">Troubleshooting</button></a>
 
                 <h4>Contact Us Regionally: </h4>
              <ul>
