Edit YJ comment on BDbilling and Add fasta reference for AbSeq

--- a/PrimaryPipelineSetup/sections/step3_AbSeq Custom Reference.html
+++ b/PrimaryPipelineSetup/sections/step3_AbSeq Custom Reference.html
@@ -4,6 +4,7 @@
 
 <h3>Instructions</h3>
 <ol>
+    <li>Navigate to <a href="https://abseq-ref-gen.genomics.bd.com/">BD AbSeq Panel Reference Generator</a> </li>
     <li>If BD® OMICS-One Protein Panel(s) or BD® AbSeq Immune Discovery Panel is used in the experiment, click “<” on the left of the Panel (highlighted in the red box) to add to the “My Panel” column.<br>
         <img src="./assets/images/AbSeqRef_step1.png" alt="Step 1"></li>
     <li>If other BD® AbSeq Antibody-Oligo(s) are used in the experiment, select the BD® AbSeq product(s) and click “>>” to add to the “My Panel” column.<br>
