--- a/PrimaryPipelineSetup/sections/step3_Reference Selector Tool.html
+++ b/PrimaryPipelineSetup/sections/step3_Reference Selector Tool.html
@@ -55,9 +55,16 @@
                         <h3>Reference file required for AbSeq</h3>
                         <ul>
                             <li><b>If you are using pre-designed BD AbSeq Immune Discovery Panel:<br></b>Download <a href="https://bd-rhapsody-public.s3.amazonaws.com/AbSeq-references/BDAbSeq_ImmuneDiscoveryPanel.fasta">BDAbSeq_ImmuneDiscoveryPanel.fasta</a>.</li>
-                            <br><li><b>If you are using custom AbSeq Panel or BD OMICS-One Panel:</b>
+                            <br><li><b>If you are using custom AbSeq Panel or BD OMICS-One Panel, please use the download link below:</b>
+                                <ul>
+                                    <li><a href="https://bd-rhapsody-public.s3.us-east-1.amazonaws.com/AbSeq-references/BD_OO_Immune_Profiler_Protein_Panel.fasta">Immune Profiler Protein Panel</a></li>
+                                    <li><a href="https://bd-rhapsody-public.s3.us-east-1.amazonaws.com/AbSeq-references/BD_OO_B-Cell_Protein_Panel.fasta">B-Cell Protein Panel</a></li>
+                                    <li><a href="https://bd-rhapsody-public.s3.us-east-1.amazonaws.com/AbSeq-references/BD_OO_T-Cell_Protein_Panel.fasta">T-Cell Protein Panel</a></li>
+                                    <li><a href="https://bd-rhapsody-public.s3.us-east-1.amazonaws.com/AbSeq-references/BD_OO_T-Cell_B-Cell_Protein_Panel.fasta">Adaptive Protein Panel</a></li>
+                                </ul>
+                            <br><li><b>If you need custom AbSeq Panel, please select the "AbSeq Custom Reference" option on the right menu.</b></li>
                             <ul>
-                                <li>Please navigate to our <a href="https://abseq-ref-gen.genomics.bd.com/">BD AbSeq Panel Reference Generator</a> to generate your own reference.</li>
+                                <li>You will be navigated to <a href="https://abseq-ref-gen.genomics.bd.com/">BD AbSeq Panel Reference Generator</a> to generate your own reference.</li>
                                 <li>Follow the website instructions on how to generate your own fasta reference file.</li>
                                 <li>This tool will help create the FASTA file required for the 'AbSeq Reference' input in the BD Rhapsod&trade; Pipeline.</li>
                             </ul>
