Add gif for pipeline

--- a/PrimaryPipelineSetup/steps/step1.html
+++ b/PrimaryPipelineSetup/steps/step1.html
@@ -1,6 +1,7 @@
 <h2>Setting Up Your Pipeline</h2>
-<p>This is an overview to set up your Pipeline Analysis platform. Please follow the manu on the right to navigate on how to set up your BD Rhapsody&trade; Pipeline Analysis.</p>
 
+<p>This is an overview to set up your Pipeline Analysis platform. Please follow the manu on the right to navigate on how to set up your BD Rhapsody&trade; Pipeline Analysis.</p>
+<center><img src="./assets/images/pipeline.gif"></center>
 <div class="card">
     <h2>Pipeline Setup, Requirements and Extra Utilities</h2>
 <p>Setting up Rhapsody&trade; Pipeline using several methods:</p>
