--- a/PrimaryPipelineSetup/steps/step4.html
+++ b/PrimaryPipelineSetup/steps/step4.html
@@ -1,5 +1,5 @@
 <h2>Run your BD Rhapsody&trade; Pipeline</h2>
-
+<center><img src="./assets/images/pipeline.gif"></center>
     <p>Now that you have set up your pipeline, uploaded your sequencing data, and selected your reference files, you are ready to run the BD Rhapsody&trade; Pipeline. First, you need to select the menu on the right, whether you are running your pipeline on the Cloud Platform (Velsera) or Locally.</p>
 
     <h3>What is this Chapter for?</h3>
