--- a/PrimaryPipelineSetup/steps/step5.html
+++ b/PrimaryPipelineSetup/steps/step5.html
@@ -1,3 +1,3 @@
 <h2> Pipeline Output Files</h2>
 
-<center><img src="./assets/images/pipeline.gif"></center>
+<center><img src="./assets/images/pipeline.gif" style="width:100%;"></center>
